[gd_scene load_steps=4 format=3 uid="uid://ctfq16ucdtgys"]

[ext_resource type="Script" path="res://scripts/entities/spaceship.gd" id="1_sllql"]
[ext_resource type="Texture2D" uid="uid://clqyml6hl7uvp" path="res://assets/sprites/alien.png" id="2_u6ml1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c2t8e"]
radius = 93.0054

[node name="Spaceship" type="Area2D"]
script = ExtResource("1_sllql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c2t8e")

[node name="SlingshotLine" type="Line2D" parent="."]
points = PackedVector2Array(157, 147)
width = 8.0

[node name="TrajectoryLine" type="Line2D" parent="."]
width = 3.0
default_color = Color(1, 1, 1, 0.627451)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="TrajectoryRaycast" type="RayCast2D" parent="."]
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_u6ml1")
